[workspace]
members = ["jito_protos", "jito_searcher_client"]
resolver = "2"

[workspace.dependencies]

jito-protos = { path = "jito_protos" }

solana-client = ">=2"
solana-metrics = ">=2"
solana-transaction-status = ">=2"
solana-perf = ">=2"
solana-sdk = ">=2"

bincode = "1.3.3"
bytes = "1.4.0"

prost = "=0.13.4"
prost-types = "=0.13.4"
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tonic-build = "0.12.3"

tokio = "1"
futures-util = "0.3.28"

log = "0.4"
thiserror = "1.0.40"
